--- a/snippets/icon-pagination.liquid
+++ b/snippets/icon-pagination.liquid
@@ -1,21 +1,11 @@
-{% if paginate.pages > 1 %}
-    <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-        {% if paginate.previous.is_link %}
-        <li class="page-item"><a href="{{ paginate.previous.url }}" class="page-link">{{ paginate.previous.title }}</a></li>
+{% if pagination.pages > 1 %}
+    <nav role="navigation" class="flex justify-center items-center my-8">
+        {% if pagination.previous %}
+            <a href="{{ pagination.previous.url }}" class="border border-gray-600 text-gray-600 hover:bg-gray-600 hover:text-white px-8 py-3 mx-1 rounded-sm font-medium">Previous</a>
         {% endif %}
-        
 
-        {% for part in paginate.parts %}
-        {% if part.is_link %}
-            <li class="page-item"><a href="{{ part.url }}" class="page-link">{{ part.title }}</a></li>
-        {% else %}
-            <li class="page-item disabled"><a href="{{ part.url }}" class="page-link">{{ part.title }}</a></li>
+        {% if pagination.next %}
+            <a href="{{ pagination.next.url }}" class="border border-gray-600 text-gray-600 hover:bg-gray-600 hover:text-white px-8 py-3 mx-1 rounded-sm font-medium">Next</a>
         {% endif %}
-        {% endfor %}
-        {% if paginate.next.is_link %}
-        <li class="page-item"><a href="{{ paginate.next.url }}" class="page-link">{{ paginate.next.title }}</a></li>
-        {% endif %}
-    </ul>
     </nav>
 {% endif %}
